kubernetes/pelican/panel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelican
  namespace: pelican
spec:
  selector:
    matchLabels:
      app: pelican
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pelican
    spec:
      containers:
      - name: pelican
        image: ghcr.io/pelican-dev/panel:v1.0.0-beta11
        ports: 
          - containerPort: 9000
        volumeMounts:
        - mountPath: /pelican-data
          name: pelican-data-content
      volumes:
      - name: pelican-data-content
        persistentVolumeClaim:
          claimName: pelican-data-claim
