kubernetes/pelican/panel/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pelican
  namespace: pelican
spec:
  selector:
    app: pelican
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
