kubernetes/pelican/panel/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pelican-ingress
  namespace: pelican
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`panel.staging.gameserver.rafa.run`)
      kind: Rule
      middlewares:
#        - name: default-headers
#          namespace: default
      services:
        - name: pelican
          port: 80
  tls:
    secretName: staging-gameserver-rafa-run-tls
